2014-07-198 System Administrator <lrochette@electric-cloud.com>
  * Appended the release comment to plugin descripti… …on when it is present

2014-07-198 System Administrator <lrochette@electric-cloud.com>
  * Appended the release comment to plugin descripti… …on when it is present

2014-07-198 System Administrator <lrochette@electric-cloud.com>
  * Appended the release comment to plugin description when it is present.

2014-07-198 System Administrator <lrochette@electric-cloud.com>
  * Added CHANGELOG creation

2014-07-13  Laurent Rochette <lrochette@electric-cloud.com>
 * EC-Admin.jar & EC-Admin.xml: new version 1.10.0
     + Added a procedure to create a plugin and by extracting each step individually
       in single files for finer granularity SCM check in.

2014-06-18  Laurent Rochette <lrochette@electric-cloud.com>
 * EC-Admin.jar & EC-Admin.xml: new version 1.9.0
     + Added a hook to allow actions to be taken when the plugin changes state in createPluginFromProject

2014-05-08  Laurent Rochette <lrochette@electric-cloud.com>
 * EC-Admin.jar & EC-Admin.xml: new version 1.8.0
     + Added feature to save plugin as an artifact version in createPluginFromProject

2014-05-02  Laurent Rochette <lrochette@electric-cloud.com>

 * EC-Admin.jar & EC-Admin.xml: new version 1.7.1
     + Fixed location of the saved filter for RunReport_Performance_Schedule schedule

2014-04-30 Laurent Rochette <lrochette@electric-cloud.com>

 * EC-Admin.jar & EC-Admin.xml: new version 1.7.0
     + Added step to fix self reference to project in createPluginFromProject
     
2014-04-29 Laurent Rochette <lrochette@electric-cloud.com>

 * EC-Admin.jar & EC-Admin.xml: new version 1.6.2
     + Fixed with resource default workspace not being used in dynamic steps in performanceMetrics
     + Fixed subprocedure call to myProject instead of a fixed call to EC-Admin in performanceMetrics
     + Fixed ec_visbility in createPluginFromProject
