@@ -4958,7 +4958,7 @@ software.&lt;/p>
         <propertyName>pluginBuildNumber</propertyName>
         <description />
         <expandable>1</expandable>
-        <value>72</value>
+        <value>73</value>
       </property>
       <property>
         <propertyName>version</propertyName>
@@ -5213,7 +5213,7 @@ Report the number of workflows.",
 
 @::createStepPickerSteps = (\%acquireSemaphore, \%artifactsCleanup, \%artifactsCleanup_byQuantity, \%createPluginFromProject, \%deleteObjects, \%deleteWorkspaceOrphans, \%jobCleanup_byResult, \%jobsCleanup, \%performanceMetrics, \%projectAsCode, \%releaseSemaphore, \%saveAllObjects, \%saveProjects, \%synchronizePlugins, \%workflowCleanup);
 
-</value></property><property><propertyName>project_version</propertyName><value>1.10.2.72</value></property></propertySheet>
+</value></property><property><propertyName>project_version</propertyName><value>1.10.2.73</value></property></propertySheet>
     <credential>
       <credentialName>adminLogin</credentialName>
       <description />
@@ -12678,10 +12678,10 @@ my $ec_setup = $projectXml->ownerDocument->createElement('property');
 $ec_setup->appendTextChild('propertyName',"ec_setup");
 $ec_setup->appendTextChild('value',"PLACEHOLDER");
 $projectPropertySheet->[0]->appendChild($ec_setup);
-# Add project_version -> 1.10.2.72 property
+# Add project_version -> 1.10.2.73 property
 my $project_version = $projectXml->ownerDocument->createElement('property');
 $project_version->appendTextChild('propertyName',"project_version");
-$project_version->appendTextChild('value','1.10.2.72');
+$project_version->appendTextChild('value','1.10.2.73');
 $projectPropertySheet->[0]->appendChild($project_version);
 
 # Replace some plugin values
@@ -12832,7 +12832,7 @@ if ($projectAsCode eq "true") {
 
   $ECsetup .= &lt;&lt; 'ENDOFPAC';
 if ($promoteAction eq 'promote') {
-    my $pluginName = 'EC-Admin-1.10.2.72';
+    my $pluginName = 'EC-Admin-1.10.2.73';
     my $pluginKey = 'EC-Admin';
 
     # The purpose of a "ProjectAsCode" plugin is to develop a PROJECT so it can be checked
@@ -13075,7 +13075,7 @@ if (-f $file) {
     printf("Content of CHANGELOG:\n");
     print @changeLogContent;
 }
-unshift (@changeLogContent,"$[/timestamp YYYY-MM-DD] $userFullName &lt;$userEmail>\n  * $comment\n\n");
+unshift (@changeLogContent,"$[/timestamp YYYY-MM-dd] $userFullName &lt;$userEmail>\n  * $comment\n\n");
 
 unless (open FILE, '>'.$file) {
         printf("File: %s\n", $file);
