@@ -1,3 +1,6 @@
+2014-07-17 System Administrator <lrochette@electric-cloud.com>
+  * Appended the release comment to plugin description when it is present
+
 2014-07-198 System Administrator <lrochette@electric-cloud.com>
   * Appended the release comment to plugin descripti… …on when it is present
 
